<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BubblePet</string>
    <color name="colorBackgroundMain">@color/gris00</color>
    <color name="colorTextMain">@color/black</color>
    <dimen name="sizeTextMain">15sp</dimen><!--Tamaño del texto recuperar contraseña-->
    <string name="fontMain" tools:ignore="ReferenceType">@font/roboto_regular</string>


    <!--HowtoUse-->
    <color name="colorTextContSpaceTitleHowtoUse">@color/gris6</color>
    <color name="colorTextContSpaceInfoHowtoUse">@color/gris11</color>
    <dimen name="paddingVContSpaceHowtoUse">20sp</dimen>
    <dimen name="paddingVContSpaceTitleHowtoUse">15sp</dimen>
    <dimen name="paddingVContSpaceInfoHowtoUse">20sp</dimen>
    <dimen name="sizeTextContSpaceTitleHowtoUse">23sp</dimen>
    <dimen name="sizeTextContSpaceInfoHowtoUse">16sp</dimen>
    <string name="titleHowtoUse">Presentación</string>
    <string name="title1HowtoUse">Presentación</string>
    <string name="info1HowtoUse">La pantalla de presentacion de la app Nos muestra una interfaz basica donde facilmente podras acceder a crear tu perfil de usuario o iniciar sesion en caso de ya tener una cuenta con nostros.</string>
    <string name="title2HowtoUse">Login</string>
    <string name="info2HowtoUse">La pantalla de login te mostrara un formulario donde podras ingresar tus datos respectivos a tu cuenta, para poder iniciar sesion. Tambien existe un boton para que puedas crearte una cuenta en caso de que no tengas ninguna.</string>
    <string name="title3HowtoUse">SignUp</string>
    <string name="info3HowtoUse">La pantalla de SignUp o registrase te enviara a un formulario donde podras rrellenar tus datos y los de tu mascota para que puedas crear tu cuenta de BubblePet.</string>
    <string name="title4HowtoUse">Información Pet</string>
    <string name="info4HowtoUse">Una vez creado el usuario se le enviara a una pantalla donde rellenara la informacion correspondiente de su mascota.</string>
    <string name="title5HowtoUse">Perfil del Usuario</string>
    <string name="info5HowtoUse">Una vez dentro del perfil del usuario encontras tu informacion y la de tu amigo peludo.</string>
    <string name="title6HowtoUse">Editar Perfil</string>
    <string name="info6HowtoUse">Aqui podras editar tu informacion y la de tu mascota. Una vez hecha la modificacion, deberas guardar los cambios y podras volver a tu perfel, encontraras tambien el boton para cerrar la sesion e incluso podras borrar tu cuenta.</string>


    <!--AboutApp-->
    <color name="colorTextContSpaceTitleAboutApp">@color/azul10</color>
    <color name="colorTextContSpaceInfoAboutApp">@color/gris11</color>
    <dimen name="paddingVContSpaceAboutApp">20sp</dimen>
    <dimen name="paddingVContSpaceTitleAboutApp">15sp</dimen>
    <dimen name="paddingVContSpaceInfoAboutApp">20sp</dimen>
    <dimen name="sizeTextContSpaceTitleAboutApp">23sp</dimen>
    <dimen name="sizeTextContSpaceInfoAboutApp">16sp</dimen>
    <string name="titleAboutApp">Que es BubblePet?</string>
    <string name="title1AboutApp">Resumen</string>
    <string name="info1AboutApp">BubblePet es un lugar propicio y especial donde podras facilmente buscar una solucion a la problematica que en vuelve a nuestros amigos peludos para poder conseguir pareja. Solo deberas crear tu perfil con la informacion requerida y podras tener tu perfil para tu mascota.</string>




    <!--TX GENERALES-->
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="color">Color</string>
    <string name="raza">Raza</string>
    <string name="salud">Estado salud</string>
    <string name="telefono">Teléfono</string>
    <string name="nombrePet">Nombre Pet</string>
    <string name="descriptionImg">Imagen</string>
    <string name="userName">Nombre usuario</string>
    <string name="upDate">Guardar Cambios</string>
    <string name="closeSesion">Cerar Sesion</string>

    <!--IMAGENES-->
    <drawable name="perrito">@drawable/ic_dogpie</drawable>
    <drawable name="perrito2">@drawable/ic_dog</drawable>
    <drawable name="perrito3">@drawable/ic_dogacostadoo</drawable>
    <drawable name="corazones">@drawable/ic_corazones</drawable>
    <drawable name="imgPerfilPerson">@drawable/fondo</drawable>
    <drawable name="imgPerfilPet">@drawable/fondopet</drawable>

    <!--TX PeopleLogin.xml-->
    <string name="login">Iniciar Sesión</string>
    <string name="signup">Registrarse</string>
    <string name="signupLoginTx">Aún no tienes una cuenta?</string>
    <string name="signupLoginbtn">Crear una aquí</string>

    <!--TX Home.xml-->
    <string name="txUserName">Nombre de usuario</string>
    <string name="txUserMail">Correo del usuario</string>
    <string name="btEditProfile">Editar perfil</string>
    <string name="Pperson">Tu perfil</string>
    <string name="Pmascota">Perfil de mascota</string>

</resources>