<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingHorizontal="30dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/userName"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/apellido"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/correo"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/telefono"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/nombrePet"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/edad"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/color"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/raza"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/salud"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/homeNamePerson1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/txUserName"
                        android:textColor="@color/gris5"
                        android:textSize="7pt"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/homeLastNamePerson1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/apellido"
                        android:textColor="@color/gris5"
                        android:textSize="7pt"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/homeEmailPerson1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/txUserMail"
                        android:textColor="@color/gris5"
                        android:textSize="7pt"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/homeCelular1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/telefono"
                        android:textColor="@color/gris5"
                        android:textSize="7pt"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/homeNamePet1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/nombrePet"
                        android:textColor="@color/gris5"
                        android:textSize="7pt"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/homeEdadPet1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/edad"
                        android:textColor="@color/gris5"
                        android:textSize="7pt"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/homeColorPet1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/color"
                        android:textColor="@color/gris5"
                        android:textSize="7pt"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/homeRazaPet1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/raza"
                        android:textColor="@color/gris5"
                        android:textSize="7pt"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/homeSaludPet1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/salud"
                        android:textColor="@color/gris5"
                        android:textSize="7pt"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="30dp">

                    <TextView
                        android:id="@+id/btnGetOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:text="@string/closeSesion"
                        android:background="@color/gris6"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="@dimen/sizeTextMain"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btnActualizar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:text="@string/upDate"
                        android:background="@color/azul10"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="@dimen/sizeTextMain"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/petProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginVertical="20dp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="Perfil"
                    android:textAlignment="center"
                    android:background="@color/azul10"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/sizeTextMain" />

                <TextView
                    android:id="@+id/borrarPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginVertical="20dp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="Eliminar Perfil"
                    android:textAlignment="center"
                    android:background="@color/rojo10"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/sizeTextMain"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>